--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<dimen name="poster_height">290dp</dimen>
-	<dimen name="card_height">658dp</dimen>
-	<dimen name="card_marginTop">236dp</dimen>
+	<dimen name="poster_height">500dp</dimen>
+	<dimen name="poster_height_land">1000dp</dimen>
+	<dimen name="card_height">750dp</dimen>
+	<dimen name="card_height_land">600dp</dimen>
+	<dimen name="card_margin_top">240dp</dimen>
+	<dimen name="card_margin_top_land">300dp</dimen>
 	<dimen name="card_corner_radius">30dp</dimen>
+	<dimen name="movie_details_name_width">250dp</dimen>
 	<dimen name="elevation_default">2dp</dimen>
-	<dimen name="elevation_underline">8dp</dimen>
 
 	<dimen name="margin_8">8dp</dimen>
 	<dimen name="margin_10">10dp</dimen>
@@ -14,7 +17,9 @@
 	<dimen name="margin_30">30dp</dimen>
 	<dimen name="margin_35">35dp</dimen>
 	<dimen name="margin_40">40dp</dimen>
+	<dimen name="margin_50">50dp</dimen>
 	<dimen name="margin_60">60dp</dimen>
+	<dimen name="margin_70">70dp</dimen>
 	<dimen name="margin_75">75dp</dimen>
 
 	<dimen name="text_size_7">7sp</dimen>
@@ -26,14 +31,18 @@
 	<dimen name="text_size_20">20sp</dimen>
 
 	<dimen name="bottom_bar_height">50dp</dimen>
-	<dimen name="bottom_bar_underline_width">197dp</dimen>
-	<dimen name="bottom_bar_underline_height">2dp</dimen>
+	<dimen name="bottom_bar_underline_height">5dp</dimen>
 
 	<dimen name="actor_portrait_width">150dp</dimen>
 	<dimen name="actor_portrait_height">196dp</dimen>
 	<dimen name="actor_portrait_distance">10dp</dimen>
 	<dimen name="actor_name_margin_top">12dp</dimen>
 	<dimen name="actor_name_text_size">12sp</dimen>
+
+	<dimen name="item_actor_left_offset">5dp</dimen>
+	<dimen name="item_actor_top_offset">0dp</dimen>
+	<dimen name="item_actor_right_offset">5dp</dimen>
+	<dimen name="item_actor_bottom_offset">50dp</dimen>
 
 	<dimen name="item_genre_vertical_padding">3dp</dimen>
 	<dimen name="item_genre_horizontal_padding">10dp</dimen>
@@ -45,8 +54,12 @@
 	<dimen name="item_movie_components_margin">5dp</dimen>
 	<dimen name="item_movie_age_margin">2dp</dimen>
 
-	<dimen name="movie_list_padding_bottom">40dp</dimen>
+	<dimen name="item_movie_left_offset">10dp</dimen>
+	<dimen name="item_movie_top_offset">0dp</dimen>
+	<dimen name="item_movie_right_offset">10dp</dimen>
+	<dimen name="item_movie_bottom_offset">50dp</dimen>
 
+	<dimen name="movie_list_padding_bottom">40dp</dimen>
 
 
 </resources>
